# main.go
@@ -13,24 +13,6 @@ import (
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
-type AppControllers struct {
-	Locations    controllers.LocationController
-	AccountTypes controllers.AccountTypeController
-	Currency     controllers.CurrencyController
-}
-
-var appControllers = AppControllers{
-	Locations:    controllers.NewLocationController(),
-	AccountTypes: controllers.NewAccountTypeController(),
-	Currency:     controllers.NewCurrencyController(),
-}
-
-func (ac *AppControllers) InitServices(collections *database.Collections) {
-	ac.Locations.Service = services.NewLocationService(collections.Locations)
-	ac.AccountTypes.Service = services.NewAccountTypeService(collections.AccountTypes)
-	ac.Currency.Service = services.NewCurrencyService(collections.Currency)
-}
-
 // @title Gipsyland Farming
 // @version 2.0
 // @description Farming service API description.
@@ -42,22 +24,28 @@ func main() {
 		log.Fatal("asdasd")
 	}
 
-	appControllers.InitServices(dbCollections)
+	var appServices services.AppServices
+	appServices.Init(dbCollections)
+	var appControllers = controllers.NewAppControllers(appServices)
 
 	e := echo.New()
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
 
-	SetRoutes(e)
+	SetRoutes(e, appControllers)
 
 	e.Logger.Fatal(e.Start(":80"))
 
 }
 
-func SetRoutes(e *echo.Echo) {
+func SetRoutes(e *echo.Echo, appControllers controllers.AppControllers) {
 
 	root := e.Group("/v2")
 	root.GET("/swagger/*", echoSwagger.WrapHandler)
+
+	auth := root.Group("/auth")
+	auth.GET("/uid", appControllers.UID.GetUID)
+	auth.GET("/uid/admin", appControllers.UID.GetServiceAdminUID)
 
 	locations := root.Group("/locations")
 	locations.POST("/create", appControllers.Locations.Create)
@@ -86,4 +74,28 @@ func SetRoutes(e *echo.Echo) {
 	currencyDelete.DELETE("", appControllers.Currency.Delete)
 	currencyDelete.DELETE("/all", appControllers.Currency.DeleteAll)
 
+	accountRequests := root.Group("/accountRequests")
+	accountRequests.POST("/create", appControllers.AccountRequests.Create)
+	accountRequests.PUT("/take", appControllers.AccountRequests.Take)
+	accountRequests.PUT("/cancel", appControllers.AccountRequests.Cancel)
+	accountRequests.PUT("/update", appControllers.AccountRequests.Update)
+	accountRequests.PUT("/complete", appControllers.AccountRequests.Complete)
+	accountRequestsDelete := accountRequests.Group("/delete")
+	accountRequestsDelete.DELETE("/all", appControllers.AccountRequests.DeleteAll)
+
+	tableData := root.Group("/tableData")
+	tableDataGet := tableData.Group("/get")
+	tableDataGet.GET("", appControllers.Tables.Get)
+	tableDataGet.GET("/all", appControllers.Tables.GetAll)
+
+	farmerAccess := root.Group("/farmerAccess")
+	farmerAccess.POST("/add", appControllers.FarmerAccessController.Add)
+	farmerAccess.DELETE("/revoke", appControllers.FarmerAccessController.Revoke)
+	farmerAccessGet := farmerAccess.Group("/get")
+	farmerAccessGet.GET("/teams", appControllers.FarmerAccessController.GetTeams)
+	farmerAccessGet.GET("/farmers", appControllers.FarmerAccessController.GetFarmers)
+	farmerAccessGet.GET("/all", appControllers.FarmerAccessController.GetAll)
+	farmerAccessGet.GET("/access", appControllers.FarmerAccessController.GetAccess)
+	farmerAccessDelete := farmerAccess.Group("/delete")
+	farmerAccessDelete.DELETE("/all", appControllers.FarmerAccessController.DeleteAll)
 }
